# nuklear

./: README.md  engine.py  nnuklear.py  nuklear.pln  nuklear.pot  parser.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.pln
locale/: engine.en.yml  engine.pl.yml  nnuklear.en.yml  nnuklear.pl.yml  parser.en.yml  parser.pl.yml
locale/pl_PL/LC_MESSAGES/: nuklear.mo  nuklear.po
nuklear/: __init__.py  engine.py  lang.py  parser.py  tokenizer.py
tests/: test_board.py  test_player.py
