[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nuklear"
authors = [{name = "Åukasz A. Pelc", email = "lukasz.pelc.81@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "python-i18n==0.3.9",
    "python-i18n[YAML]==0.3.9",
    "babel==2.14.0",
]

[project.urls]
Home = "https://gitlab.analizy.pl/aol/nuklear"

[project.optional-dependencies]
test = []
dev = ["bandit", "isort", "mypy", "pylance", "yapf", "mccabe", "flake8"]
doc = []

[tool.black]
line-length = 120
target-version = ["py38"]
skip-string-normalization = 1

[tool.autopep8]
max-line-length = 119
ignore = "W605,W503,W504,C0114,C0115,C0116"
recursive = 1

[tool.pycodestyle]
max-line-length = 119
statistics = true
count = true
format = "pylint"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
allow_redefinition = true
warn_unused_ignores = false
follow_imports = "skip"
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/test_*\\.py$"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 119
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = false
split_complex_comprehension = true
arithmetic_precedence_indication = false
spaces_around_subscript_colon = false
coalesce_brackets = true
dedent_closing_brackets = false
split_before_dot = true
space_between_ending_comma_and_closing_bracket = false
split_before_closing_bracket = true
split_before_expression_after_opening_paren = true
blank_lines_between_top_level_imports_and_variables = 2
align_closing_bracket_with_visual_indent = true
allow_split_before_dict_value = true

[tool.isort]
profile = "pycharm"
remove_redundant_aliases = true
line_length = 119
indented_import_headings = false
multi_line_output = 0
force_grid_wrap = 0
